// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles TypeScript - fork checker 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
Starting type checking service...
Using 1 worker with 2048MB memory limit
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name         module                                                       status
  1 kB  131          (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315          (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354          ./js/script.ts + 1 modules                                   built
  1 kB  561          ./js/SomeLibrary.ts                                          built

  size  name         asset                                                        status
  1 kB  default      myBundle.min.js                                              emitted
  1 kB  map          myBundle.min.js.map                                          emitted
  1 kB  someLibrary  someLibrary.myBundle.min.js                                  emitted
  1 kB  map          someLibrary.myBundle.min.js.map                              emitted

  (6 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript - fork checker 2`] = `
"(function(e,n){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=n();else if(\\"function\\"===typeof define&&define.amd)define([],n);else{var t=n();for(var r in t)(\\"object\\"===typeof exports?exports:e)[r]=t[r]}})(window,(function(){return function(){\\"use strict\\";var e={315:function(e,n,t){function r(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}t.d(n,{b:function(){return r}})},131:function(e,n,t){function r(e,n){for(var t=0;t<n.length;t++){var r=n[t];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(e,r.key,r)}}function o(e,n,t){return n&&r(e.prototype,n),t&&r(e,t),e}t.d(n,{b:function(){return o}})},354:function(e,n,t){t.r(n);var r=t(315);var o=t(131);function u(e,n){return e+n}t.d(n,{default:function(){return i}});var i=function(){function e(){(0,r.b)(this,e),console.log(\\"init class\\")}return(0,o.b)(e,[{key:\\"method\\",value:function(){console.log(u(2,4)),t.e(399).then(t.bind(null,561)).then((function(e){var n=new e.default;console.log(n.add(2,4))}))}}]),e}()}};var n={};function t(r){if(n[r])return n[r].exports;var o=n[r]={i:r,l:false,exports:{}};return e[r](o,o.exports,t),o.l=true,o.exports}return t.m=e,function(){var e=Object.prototype.hasOwnProperty;t.d=function(n,t){for(var r in t)e.call(t,r)&&!e.call(n,r)&&Object.defineProperty(n,r,{enumerable:true,get:t[r]})}}(),function(){t.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:true})}}(),function(){t.f={},t.e=function(e){return Promise.all(Object.keys(t.f).reduce((function(n,r){return t.f[r](e,n),n}),[]))}}(),function(){t.p=\\"\\"}(),function(){t.u=function(e){return\\"someLibrary.myBundle.min.js\\"}}(),function(){var e={913:0};function n(n){var r=n[0];var o=n[1];var i=n[3];var a,c,f=0,l=[];for(;f<r.length;f++)c=r[f],Object.prototype.hasOwnProperty.call(e,c)&&e[c]&&l.push(e[c][0]),e[c]=0;for(a in o)Object.prototype.hasOwnProperty.call(o,a)&&(t.m[a]=o[a]);i&&i(t),u&&u(n);while(l.length)l.shift()()}t.f.j=function(n,r){var o=Object.prototype.hasOwnProperty.call(e,n)?e[n]:void 0;if(0!==o)if(o)r.push(o[2]);else{var u=new Promise((function(t,r){o=e[n]=[t,r]}));r.push(o[2]=u);var i=t.p+t.u(n);var a=function(){if(Object.prototype.hasOwnProperty.call(e,n)&&(o=e[n],0!==o&&(e[n]=void 0),o))return o[1]};var c=document.createElement(\\"script\\");var f;c.charset=\\"utf-8\\",c.timeout=120,t.nc&&c.setAttribute(\\"nonce\\",t.nc),c.src=i;var l=new Error;f=function(e){f=function(){},c.onerror=c.onload=null,clearTimeout(s);var t=a();if(t){var r=e&&(\\"load\\"===e.type?\\"missing\\":e.type);var o=e&&e.target&&e.target.src;l.message=\\"Loading chunk \\"+n+\\" failed.\\\\n(\\"+r+\\": \\"+o+\\")\\",l.name=\\"ChunkLoadError\\",l.type=r,l.request=o,t(l)}};var s=setTimeout((function(){f({type:\\"timeout\\",target:c})}),12e4);c.onerror=c.onload=f,document.head.appendChild(c)}};var r=window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[];var o=r.push.bind(r);r.push=n;var u=o}(),t(354)}()}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript - fork checker 3`] = `
"(window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[]).push([[399],{561:function(n,u,t){\\"use strict\\";t.r(u),t.d(u,{default:function(){return i}});var e=t(315);var r=t(131);var i=function(){function n(){(0,e.b)(this,n)}return(0,r.b)(n,[{key:\\"add\\",value:function(n,u){return n+u}},{key:\\"substract\\",value:function(n,u){return n-u}},{key:\\"divide\\",value:function(n,u){return n/u}}]),n}()}}]);
//# sourceMappingURL=someLibrary.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name     module                                                       status
  1 kB  131      (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315      (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354      ./js/script.ts + 1 modules                                   built
  1 kB  561      ./js/SomeLibrary.ts                                          built

  size  name     asset                                                        status
  1 kB  js       561.myBundle.min.js                                          emitted
  1 kB  map      561.myBundle.min.js.map                                      emitted
  1 kB  ts       js/Component.d.ts                                            emitted
  1 kB  ts       js/SomeLibrary.d.ts                                          emitted
  1 kB  ts       js/script.d.ts                                               emitted
  1 kB  default  myBundle.min.js                                              emitted
  1 kB  map      myBundle.min.js.map                                          emitted

  (6 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript 2`] = `
"(function(e,n){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=n();else if(\\"function\\"===typeof define&&define.amd)define([],n);else{var t=n();for(var r in t)(\\"object\\"===typeof exports?exports:e)[r]=t[r]}})(window,(function(){return function(){\\"use strict\\";var e={315:function(e,n,t){function r(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}t.d(n,{b:function(){return r}})},131:function(e,n,t){function r(e,n){for(var t=0;t<n.length;t++){var r=n[t];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(e,r.key,r)}}function o(e,n,t){return n&&r(e.prototype,n),t&&r(e,t),e}t.d(n,{b:function(){return o}})},354:function(e,n,t){t.r(n);var r=t(315);var o=t(131);function u(e,n){return e+n}t.d(n,{default:function(){return i}});var i=function(){function e(){(0,r.b)(this,e),console.log(\\"init class\\")}return(0,o.b)(e,[{key:\\"method\\",value:function(){console.log(u(2,4)),t.e(561).then(t.bind(null,561)).then((function(e){var n=new e.default;console.log(n.add(2,4))}))}}]),e}()}};var n={};function t(r){if(n[r])return n[r].exports;var o=n[r]={i:r,l:false,exports:{}};return e[r](o,o.exports,t),o.l=true,o.exports}return t.m=e,function(){var e=Object.prototype.hasOwnProperty;t.d=function(n,t){for(var r in t)e.call(t,r)&&!e.call(n,r)&&Object.defineProperty(n,r,{enumerable:true,get:t[r]})}}(),function(){t.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:true})}}(),function(){t.f={},t.e=function(e){return Promise.all(Object.keys(t.f).reduce((function(n,r){return t.f[r](e,n),n}),[]))}}(),function(){t.p=\\"\\"}(),function(){t.u=function(e){return e+\\".myBundle.min.js\\"}}(),function(){var e={913:0};function n(n){var r=n[0];var o=n[1];var i=n[3];var a,c,f=0,l=[];for(;f<r.length;f++)c=r[f],Object.prototype.hasOwnProperty.call(e,c)&&e[c]&&l.push(e[c][0]),e[c]=0;for(a in o)Object.prototype.hasOwnProperty.call(o,a)&&(t.m[a]=o[a]);i&&i(t),u&&u(n);while(l.length)l.shift()()}t.f.j=function(n,r){var o=Object.prototype.hasOwnProperty.call(e,n)?e[n]:void 0;if(0!==o)if(o)r.push(o[2]);else{var u=new Promise((function(t,r){o=e[n]=[t,r]}));r.push(o[2]=u);var i=t.p+t.u(n);var a=function(){if(Object.prototype.hasOwnProperty.call(e,n)&&(o=e[n],0!==o&&(e[n]=void 0),o))return o[1]};var c=document.createElement(\\"script\\");var f;c.charset=\\"utf-8\\",c.timeout=120,t.nc&&c.setAttribute(\\"nonce\\",t.nc),c.src=i;var l=new Error;f=function(e){f=function(){},c.onerror=c.onload=null,clearTimeout(s);var t=a();if(t){var r=e&&(\\"load\\"===e.type?\\"missing\\":e.type);var o=e&&e.target&&e.target.src;l.message=\\"Loading chunk \\"+n+\\" failed.\\\\n(\\"+r+\\": \\"+o+\\")\\",l.name=\\"ChunkLoadError\\",l.type=r,l.request=o,t(l)}};var s=setTimeout((function(){f({type:\\"timeout\\",target:c})}),12e4);c.onerror=c.onload=f,document.head.appendChild(c)}};var r=window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[];var o=r.push.bind(r);r.push=n;var u=o}(),t(354)}()}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript 3`] = `
"(window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[]).push([[561],{561:function(n,u,t){\\"use strict\\";t.r(u),t.d(u,{default:function(){return i}});var e=t(315);var r=t(131);var i=function(){function n(){(0,e.b)(this,n)}return(0,r.b)(n,[{key:\\"add\\",value:function(n,u){return n+u}},{key:\\"substract\\",value:function(n,u){return n-u}},{key:\\"divide\\",value:function(n,u){return n/u}}]),n}()}}]);
//# sourceMappingURL=561.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 4`] = `
"export default class SomeLibrary {
    add(a: any, b: any): any;
    substract(a: any, b: any): number;
    divide(a: any, b: any): number;
}
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (3 assets, 2 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts
  14:0  error  Parsing error: Unexpected token. A constructor, method, accessor, or property was expected

✖ 1 problem (1 error, 0 warnings)

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts(14,1)
      TS1068: Unexpected token. A constructor, method, accessor, or property was expected.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
}
`;

exports[`Fails gracefully on invalid TS - fork checker 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
Starting type checking service...
Using 1 worker with 2048MB memory limit
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (2 assets, 2 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 1 problem (1 error, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Fails gracefully on invalid TS 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (3 assets, 2 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts(5,17)
      TS2339: Property 'someNonExistingMethod' does not exist on type 'D'.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
}
`;

exports[`Lints TypeScript with webpack 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name  module                                                       status
  1 kB  131   (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315   (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354   ./js/script.ts + 1 modules                                   built failed ✖
  1 kB  561   ./js/SomeLibrary.ts                                          built failed ✖

  (7 assets, 6 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  2:1  error  Prefer default export                                               @swissquote/swissquote/import/prefer-default-export
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

✖ 3 problems (3 errors, 0 warnings)
  2 errors and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/SomeLibrary.ts
  10:15  error  Delete \`⏎·\`  @swissquote/swissquote/prettier/prettier

✖ 1 problem (1 error, 0 warnings)
  1 error and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`                   @swissquote/swissquote/prettier/prettier
   5:1   error    Replace \`····constructor·\` with \`··constructor\`        @swissquote/swissquote/prettier/prettier
   6:5   warning  Unexpected console statement                           no-console
   7:1   error    Insert \`·\`                                             @swissquote/swissquote/prettier/prettier
  10:5   warning  Unexpected console statement                           no-console
  10:17  error    Replace \`·test(·\` with \`test(\`                         @swissquote/swissquote/prettier/prettier
  12:34  error    Replace \`·(SomeLibrary)·=>⏎···\` with \`SomeLibrary·=>\`  @swissquote/swissquote/prettier/prettier
  16:7   warning  Unexpected console statement                           no-console
  17:7   error    Insert \`;\`                                             @swissquote/swissquote/prettier/prettier

✖ 9 problems (6 errors, 3 warnings)
  6 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 3 problems (3 errors, 0 warnings)

[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
(node:11111) DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
  size  name     module                       status
  1 kB  163      ./js/index.ts + 3 modules    built

  size  name     asset                        status
  1 kB  ts       js/imported-typescript.d.ts  emitted
  1 kB  ts       js/index.d.ts                emitted
  1 kB  default  myBundle.min.js              emitted
  1 kB  map      myBundle.min.js.map          emitted

  (1 module hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
